--- a/SkyBetufi/SourceCode/SkySrc/AppUI/MainPage/MainPageView/KMonkeyHTMainPageHomeCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/MainPage/MainPageView/KMonkeyHTMainPageHomeCell.xib
@@ -25,7 +25,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQJ-Iz-3Fp" userLabel="headerView">
                         <rect key="frame" x="15" y="8" width="345" height="60"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aYJ-2b-EQu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aYJ-2b-EQu">
                                 <rect key="frame" x="0.0" y="5" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="6rh-mn-Efb"/>
@@ -69,7 +69,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwP-Wg-1xf">
                         <rect key="frame" x="15" y="131.5" width="345" height="194"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="rwP-Wg-1xf" secondAttribute="height" multiplier="16:9" id="2G3-tm-oiR"/>
+                            <constraint firstAttribute="height" constant="194" id="xDA-8g-e0l"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WHv-Lz-E8f" userLabel="hotCommentView">
@@ -272,6 +272,7 @@
                 <outlet property="titleLabel" destination="lTr-0I-WbP" id="grq-A3-Fwa"/>
                 <outlet property="viewCountLabel" destination="itZ-4i-GUV" id="Anr-Su-T9z"/>
                 <outlet property="webContentView" destination="rwP-Wg-1xf" id="3cX-EP-C2D"/>
+                <outlet property="webContentViewHeight" destination="xDA-8g-e0l" id="X4b-17-meD"/>
             </connections>
             <point key="canvasLocation" x="53.600000000000001" y="48.575712143928037"/>
         </tableViewCell>
