二、赛程列表样式 列表显示调整

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/UKRosRedMatchHome.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/UKRosRedMatchHome.storyboard
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gex-t3-Zoy">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gex-t3-Zoy">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Match Home View Controller-->
+        <!--PackageHT Match Home View Controller-->
         <scene sceneID="gbU-TA-ght">
             <objects>
                 <viewController id="Gex-t3-Zoy" customClass="YYPackageHTMatchHomeViewController" sceneMemberID="viewController">
@@ -18,47 +16,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7l1-Fg-EXC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7l1-Fg-EXC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nav_icon_back" translatesAutoresizingMaskIntoConstraints="NO" id="bbO-Np-gXa">
-                                        <rect key="frame" x="15" y="10" width="9" height="15"/>
+                                        <rect key="frame" x="15" y="-7" width="9" height="15"/>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_right_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="yWd-J0-arK">
-                                        <rect key="frame" x="352" y="10" width="8" height="15"/>
+                                        <rect key="frame" x="352" y="-7" width="8" height="15"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="前7天" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1R0-5g-62M">
-                                        <rect key="frame" x="34" y="9" width="37" height="17"/>
+                                        <rect key="frame" x="34" y="-8" width="37" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="後7天" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kP-hz-xvO">
-                                        <rect key="frame" x="305" y="9" width="37" height="17"/>
+                                        <rect key="frame" x="305" y="-8" width="37" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03-08至03-15" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pI9-9u-Uvs">
-                                        <rect key="frame" x="140" y="2.5" width="95" height="30"/>
+                                        <rect key="frame" x="140" y="-14.5" width="95" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1e2-i6-Qv8">
-                                        <rect key="frame" x="140" y="2.5" width="95" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1e2-i6-Qv8">
+                                        <rect key="frame" x="140" y="-14.5" width="95" height="30"/>
                                         <connections>
                                             <action selector="onSelectDateButtonTapped:" destination="Gex-t3-Zoy" eventType="touchUpInside" id="ycL-La-k7V"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mbc-lq-6tg">
-                                        <rect key="frame" x="0.0" y="0.0" width="91" height="35"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mbc-lq-6tg">
+                                        <rect key="frame" x="0.0" y="0.0" width="91" height="1"/>
                                         <connections>
                                             <action selector="onPreviousButtonTapped:" destination="Gex-t3-Zoy" eventType="touchUpInside" id="bPm-OK-Mrp"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="miw-cY-5Nv">
-                                        <rect key="frame" x="285" y="0.0" width="90" height="35"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="miw-cY-5Nv">
+                                        <rect key="frame" x="285" y="0.0" width="90" height="1"/>
                                         <connections>
                                             <action selector="onNextButtonTappd:" destination="Gex-t3-Zoy" eventType="touchUpInside" id="jiR-75-EKi"/>
                                         </connections>
@@ -87,15 +85,16 @@
                                     <constraint firstItem="1e2-i6-Qv8" firstAttribute="leading" secondItem="pI9-9u-Uvs" secondAttribute="leading" id="m0b-sY-yVs"/>
                                     <constraint firstItem="4kP-hz-xvO" firstAttribute="centerY" secondItem="7l1-Fg-EXC" secondAttribute="centerY" id="mQa-Pt-Z3H"/>
                                     <constraint firstItem="Mbc-lq-6tg" firstAttribute="trailing" secondItem="1R0-5g-62M" secondAttribute="trailing" constant="20" id="nnv-cp-wTK"/>
-                                    <constraint firstAttribute="height" constant="35" id="v12-ok-eb4"/>
+                                    <constraint firstAttribute="height" constant="1" id="v12-ok-eb4"/>
                                     <constraint firstAttribute="bottom" secondItem="miw-cY-5Nv" secondAttribute="bottom" id="vCV-su-cB5"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="IEp-gG-Ouw">
-                                <rect key="frame" x="0.0" y="35" width="375" height="632"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="1" width="375" height="666"/>
+                                <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Vyq-W2-szE"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Vyq-W2-szE" firstAttribute="trailing" secondItem="7l1-Fg-EXC" secondAttribute="trailing" id="62g-oo-gfZ"/>
@@ -106,7 +105,6 @@
                             <constraint firstItem="IEp-gG-Ouw" firstAttribute="leading" secondItem="Vyq-W2-szE" secondAttribute="leading" id="jbv-xk-NOV"/>
                             <constraint firstItem="7l1-Fg-EXC" firstAttribute="top" secondItem="WK1-KC-8wB" secondAttribute="top" id="luV-aq-8tD"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Vyq-W2-szE"/>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="IEp-gG-Ouw" id="8Qj-Ao-Vbp"/>
@@ -121,5 +119,8 @@
     <resources>
         <image name="icon_right_arrow" width="8" height="15.5"/>
         <image name="nav_icon_back" width="9" height="15.5"/>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
