更改部分目录名称和比赛列表标题

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/KMonkeyHTMatchHomeGroupHeaderView.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/KMonkeyHTMatchHomeGroupHeaderView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,6 +33,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="Ctx-Gs-vtT" secondAttribute="bottom" id="MuS-SM-e1S"/>
@@ -42,10 +41,11 @@
                 <constraint firstItem="Ctx-Gs-vtT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jQk-rZ-9ov"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="nameLabel" destination="tIu-Ik-V8i" id="B67-9q-QTh"/>
+                <outlet property="xxContentView" destination="Ctx-Gs-vtT" id="BDa-zg-kDv"/>
             </connections>
+            <point key="canvasLocation" x="-217" y="75"/>
         </view>
     </objects>
 </document>
